# Quantum-Phase-Detection-ANNNI

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.md  MNIST14QCNN.ipynb  QCNN.ipynb  README.md  VQE-Ising.ipynb  bibliography.md  checklist.md  params.job  params300.job  params300fix_X.job  params300fix_Y.job  params_qcnn.job  phase-estimation.ipynb  qcnn8_params.job  qfuncs.py  requirements.txt  setup.cfg  vqe_circuit_params.job
.github/workflows/: pytest.yaml
data/small_sets/: acc.job  loss.job
docs/source/: IsingChain.rst  PhaseEstimation.rst  conf.py  index.rst  introduction.rst  modules.rst  phase-estimation.rst
notebooks/: chi_study.ipynb  encoderANNNI.ipynb  exact_diagonalization.ipynb  exact_diagonalization2.ipynb  low_points_training.ipynb  mps_to_qc.ipynb  qcnn.ipynb  reportplots.ipynb  test_autoencoder.ipynb  test_vqe.ipynb  tutorial.ipynb  vqe.ipynb
notebooks/data/: sample_vqe2
notebooks/test/: highest_nqubits.ipynb  qcnn_test.py
notebooks/test_gen/: plots.ipynb  qcnn_params12  qcnn_params6  test  test_autoencoder.ipynb  test_qcnn.ipynb
phase-estimation/: Untitled.ipynb  magnetization.ipynb  multiprocessing_tests.ipynb  phase-estimation-noisy.ipynb  phase-estimation.ipynb  phase-estimation_mix.ipynb  qcnn_functions.py  qcnn_params.job  qcnn_weighted_params.job  test  vqe-noisy-backend.ipynb  vqe_circuit_params.job  vqe_func.ipynb  vqe_functions.py  vqe_params_0.005noise.job  vqe_params_0.05noise.job  vqe_params_0noise.job  vqefind.py
phase-estimation/tests/: benchmarking.ipynb  devices.ipynb  jaxxing.ipynb  magnetization.ipynb  small_training_sets-devmixed.ipynb  small_training_sets-jax.ipynb  small_training_sets.ipynb  temp.ipynb
phase-estimation/vqe_states_job/: 0noiseN8.job  best_params.job  vqe_params_0.001noise.job  vqe_params_0.005noise.job  vqe_params_0noise.job
qiskit/: deutsch-jozsa.ipynb  grover.ipynb
src/: setup.py
study/: dmrg_states.py  exact_states.py  states.sh
tests/: nighttrain.py  test_qcnn-Copy1.ipynb  test_qcnn.ipynb  vqeold.py
(+110 files in other folders)
