[metadata]
name = PhaseEstimation
version = 0.1
author = Saverio Monaco
author_email = saveriomonaco97@gmail.com
description = Package Built on top of Pennylane for Phase Mapping of the ANNNI Model
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/SaverioMonaco/Phase-Estimation-through-QML
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    numpy>=1.22
    ipykernel==6.15.0
    joblib==1.1.0
    plotly==5.8.2
    matplotlib==3.5.2
    PennyLane==0.23.1
    tqdm==4.64.0
    jax==0.3.13
    jaxlib==0.3.10

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
