[metadata]
name = PhaseEstimation
version = 2.0.0
author = Saverio Monaco
author_email = saverio.monaco@desy.de
description = Phase Mapping of the ANNNI Model
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/SaverioMonaco/Phase-Estimation-through-QML
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.12
install_requires =
    numpy==2.0.2
    matplotlib
    PennyLane==0.40.0
    tqdm==4.67.1
    jax==0.5.0
    jaxlib==0.5.0
    optax==0.2.4

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7

[mypy]
ignore_missing_imports = True